@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-25T16:13:42Z",
+  "timestamp" : "2024-05-26T08:13:56Z",
   "count_outdated" : 1116,
   "uniques_outdated" : 650,
-  "count" : 1139,
-  "uniques" : 668,
+  "count" : 1140,
+  "uniques" : 669,
   "clones" : [
     {
       "timestamp": "2024-05-14T00:00:00Z",
@@ -109,6 +109,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
