@@ -1,3 +1,12 @@
+2024-05-26T08:13:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9241798464 # 307
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-26
+* notice: last 14d: unq all: 3 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 650 1116 / 668 1139
+* notice: next accum: outdated-unq outdated-all / unq all: 650 1116 / 669 1140
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-26]
+
 2024-05-25T16:13:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9236706526 # 305
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
